Updates from Overleaf

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -212,3 +212,17 @@ howpublished = {\url{https://www.acs.psu.edu/drussell/Demos/BeerBottle/beerbottl
     year   ={2019},
     howpublished = {\url{https://keirancantilina.github.io/project/rocket-bells/}}
 }
+
+@book{jin2015structural,
+  title={Structural Vibration: A uniform accurate solution for laminated beams, plates and shells with general boundary conditions},
+  author={Jin, Guoyong and Ye, Tiangui and Su, Zhu},
+  year={2015},
+  publisher={Springer}
+}
+
+@book{qatu2004vibration,
+  title={Vibration of laminated shells and plates},
+  author={Qatu, Mohamad Subhi},
+  year={2004},
+  publisher={Elsevier}
+}
