--- a/Paper/waterbottles.tex
+++ b/Paper/waterbottles.tex
@@ -151,7 +151,7 @@
 
 \affiliation{
 \paperauthorA \, }
-{\href{http://ccrma.stanford.edu}{Center for Computer Research in Music and Acoustics} \\ Stanford University \\ Palo Alto, CA \\ {\tt\{jatin|kermit|mrau\}@ccrma.stanford.edu}}
+{\href{http://ccrma.stanford.edu}{Center for Computer Research in Music and Acoustics} \\ Stanford University \\ Stanford, CA, USA \\ {\tt\{jatin|kermit|mrau\}@ccrma.stanford.edu}}
 
 \begin{document}
 % more pdf-tex settings:
@@ -185,7 +185,7 @@ can produce a pleasing resonant sound when struck with a knee, hand,
 or other body part. The authors further noticed that water bottles can
 produce a great variety of sounds, depending not only on the shape and
 material of the bottle, but also on the amount of liquid contained
-within the bottle, and amount and placement of stickers on the
+within the bottle, as well as the amount and placement of stickers on the
 exterior of the bottle. Water bottle acoustics have not gone unnoticed
 by water bottle manufacturers, as at least one prominent manufacturer claims
 to be well aware of the pleasing acoustic properties of their bottles
@@ -257,7 +257,7 @@ implementation of a full water bottle synthesizer.
 %
 In this study, we want to study the vibrational modes of the water bottle independently from the method it is struck. To do this, we strike the water bottle with a force sensing hammer and measure the surface velocity of the water bottle at a corresponding point using a laser Doppler vibrometer. We additionally captured the near field radiation using a pressure microphone. From both these measurements, we deconvolve out of the signal the impact of the force hammer. The full setup can be seen in \Cref{fig:dafx_measure}. We also used a scanning vibrometer to observe the mode shapes and gain further insight into the vibrational characteristics of the bottles. 
 
-We made measurements of both a 32 oz. Wide Mouth Hydroflask and the complimentary DAFx19 water bottles with no water as well as $1/32$, $1/16$, $1/8$, $1/4$, $1/2$, and full with water. We additionally made measurements of the Hydroflask with the exterior covered in vinyl stickers as well as several intermediate and differently placed amounts of stickers. 
+We made measurements of both a 32 oz. Wide Mouth HydroFlask and the complimentary DAFx19 water bottles with no water as well as $1/32$, $1/16$, $1/8$, $1/4$, $1/2$, and full with water. We additionally made measurements of the HydroFlask with the exterior covered in vinyl stickers as well as several intermediate and differently placed amounts of stickers. 
 
 
 \begin{figure*}
@@ -273,7 +273,7 @@ We made measurements of both a 32 oz. Wide Mouth Hydroflask and the complimentar
     \label{fig:modal_analysis}
 \end{figure*}
 
-Finally, we also wanted some understanding of different impacts on the water bottles. To make these measurements, we adhered an accelerometer to the inside of the Hydroflask and struck the outside (at the location of the accelerometer) with a variety of drum mallets and body parts.  
+Finally, we also wanted some understanding of different impacts on the water bottles. To make these measurements, we adhered an accelerometer to the inside of the HydroFlask and struck the outside (at the location of the accelerometer) with a variety of drum mallets and body parts.  
 
 
 
@@ -368,7 +368,7 @@ changes as the water level in the water bottle changes.
 
 Measurements of the HydroFlask bottle show that as the water
 level increases, the first mode frequency decreases, while the
-higher modes stay at the same frequency. This suggests that the higher frequency modes are associated with vibration similar to that of a cylindrical shell, while the lowest frequency resonance is more similar to that of a beam clamped at one end with an additional mass at the end \cite{qatu2004vibration}. Figure~\ref{fig:scans} shows vibrometer scans of the HydroFlask filled roughly 40\% with water as well as empty for three different mode shapes. The scans support the model hypothesis as the frequency of two higher shell modes are similar, while the frequency of the lowest beam-like mode decreases in frequency with added mass. The measured frequency responses for the Hydroflask filled with different levels of water can be seen in fig.~\ref{fig:hydro-different-water-levels}.
+higher modes stay at the same frequency. This suggests that the higher frequency modes are associated with vibration similar to that of a cylindrical shell, while the lowest frequency resonance is more similar to that of a beam clamped at one end with an additional mass at the end \cite{qatu2004vibration}. Figure~\ref{fig:scans} shows vibrometer scans of the HydroFlask filled roughly 40\% with water as well as empty for three different mode shapes. The scans support the model hypothesis as the frequency of two higher shell modes are similar, while the frequency of the lowest beam-like mode decreases in frequency with added mass. The measured frequency responses for the HydroFlask filled with different levels of water can be seen in fig.~\ref{fig:hydro-different-water-levels}.
 
 \begin{figure}[!t]
     \centering
@@ -408,7 +408,7 @@ higher modes stay at the same frequency. This suggests that the higher frequency
 \end{figure}
 
 %
-\begin{figure}[!htb]
+\begin{figure}[!t]
     \centering
     \includegraphics[width=\linewidth,trim={0 0 1cm 1cm},clip]{../Figures/DifferentLevels/HydroWaterLevelsAdmitt}
     \caption{\it{Admittance of the HyrdoFlask with different amounts of water.}}
@@ -436,16 +436,15 @@ A comparison of the model with the measured data can be seen in \Cref{fig:water-
 \subsubsection{Damping Variation} \label{sec:water-damp}
 %
 Further analysis shows that the damping of the lowest two modes
-varies with water level as well. We can similarly model the
+varies with water level as well (see \cref{fig:hydro-different-water-levels}). We can similarly model the
 variation of the mode decay rates with water level, using a
 quartic polynomial to fit the average of decay rates of the first
 two modes (see \Cref{fig:water-mode-damp}). Note that the dampings
 of the first two modes can be modelled separately, however we chose
 to use a combined model due to the rough similarity between the
-two separate models. The water level has very little impact on the dampings of the higher modes. Since the mass-loading affects the beam-like modes more than the cylindrical shell-like modes
-We assume the lowest modes most affected by the water as the additional mass-loading aff
+two separate models. The water level has very little impact on the dampings of the higher modes. This supports the hypothesis presented in \S\ref{sec:water-freq} that the lowest modes are beam-like modes while the higher modes are cylindrical shell-like modes, as the mass loading disproportionately effects the beam-like modes. 
 %
-\begin{figure}[!htb]
+\begin{figure}[!t]
     \centering
     \includegraphics[width=\linewidth,trim={0 0 1cm 1cm},clip]{../Figures/Water_Damping}
     \caption{\it{Variation of the first two modes decay rates
@@ -461,7 +460,7 @@ timbres. We then proceeded to take measurements of the
 bottle covered in varying amount of (removable) vinyl stickers. We found
 that the mode frequencies remained mostly unchanged with the
 addition of stickers, however, the mode dampings had noticeable
-variations (see \cref{fig:sticker-mode-damp}). Much like a moon gel on a drum head, a small application of stickers dramatically increases the damping. Adding a larger amount of stickers continues to increase the damping, although it has a less pronounced effect. 
+variations (see \cref{fig:sticker-mode-damp}). Much like a moon gel on a drum head, a small application of stickers dramatically increases the damping. Adding a larger amount of stickers naturally increases the damping, although it has a less pronounced effect than the difference between no stickers and some stickers. 
 %
 \begin{figure}[!htb]
     \centering
@@ -537,9 +536,9 @@ nature, for instance a stick. With the goal of being able to synthesize these
 types of impacts, we used an accelerometer to measure the impacts of
 several body parts, as well as several types of drumsticks on a water bottle.
 \Cref{fig:impact} shows the time and frequency domain
-measurements of the various impact types. We can use any of these measurements as the input $x(t)$ to \eqref{eq:phasor}.
+measurements of the various impact types. We can use any of these measurements as the input $x(t)$ in \eqref{eq:phasor} to synthesize the sound of a water bottle struck by the desired striker.
 
-\begin{figure}
+\begin{figure}[t]
 \centering
     \begin{subfigure}[b]{\columnwidth}
          \centering
@@ -558,13 +557,14 @@ measurements of the various impact types. We can use any of these measurements a
 
 \section{Results} \label{sec:results}
 %
-Some general results \dots
+While one may expect the acoustic profile of the humble water bottle to be dramatically simple, the measurements and analysis presented here demonstrate how significantly the sound changes when the water bottle is filled by different amounts of water and covered by different amounts of stickers. 
+
 %
 \subsection{Water Bottle Synthesizers} \label{sec:synth}
 
-\subsubsection{Hydroflask Synthesizer}
+\subsubsection{HydroFlask Synthesizer}
 To demonstrate the musical power of water bottle synthesis, we have
-implemented a modal model of the 32 Oz. Wide Mouth Hydroflask
+implemented a modal model of the 32 Oz. Wide Mouth HydroFlask
 as an 8-voice synthesizer plugin (VST/AU), using the JUCE/C++
 framework (see \Cref{fig:plugin}).\footnote{\url{https://github.com/weAreROLI/JUCE}}
 The synthesizer includes controls for the amount of water in the bottle,
@@ -572,7 +572,7 @@ the number and placement of stickers on the bottle, and the option to
 strike the water bottle with a variety of objects. 
 
 \subsubsection{Bespoke Water bottle Synthesizers}
-In an effort to expand the world of water bottle synthesis to a wider
+Water bottles are often cherished possessions---potentially partially due to the unique sound of a well-loved water bottle covered in memorable stickers and dents. In an effort to expand the world of water bottle synthesis to a wider
 audience, we have developed a system for creating a ``bespoke''
 water bottle synthesizer for any water bottle. The first part of the
 system is comprised of a web app\footnote{\url{http://ccrmawaterbottles.pythonanywhere.com/}}
