Updates from Overleaf

--- a/Paper/waterbottles.tex
+++ b/Paper/waterbottles.tex
@@ -445,7 +445,7 @@ A comparison of the model with the measured data can be seen in \Cref{fig:water-
 Further analysis shows that the damping of the lowest two modes
 varies with water level as well (see \cref{fig:hydro-different-water-levels}). We can similarly model the
 variation of the mode decay rates with water level, using a
-quartic polynomial to fit the average of decay rates of the first
+5-th order polynomial to fit the decay rates of the first
 two modes (see \Cref{fig:water-mode-damp}). Note that the dampings
 of the first two modes can be modelled separately, however we chose
 to use a combined model due to the rough similarity between the
